--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div id="lap-grid">
+        <div class="lap">
+            <h1>Axolotl</h1>
+            <hr>
+        </div>
+        <div class="lap">
+        </div>
+    </div>
 </body>
 </html>
