--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -5,15 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="hátbazdmeg.css">
 </head>
 <body>
-    <div id="lap-grid">
+    <div class="grid-con">
+
         <div class="lap">
             <h1>Axolotl</h1>
+
             <hr>
+
+            <h2>Elnevezése</h2>
+            <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
+            <h2>Elterjedése</h2>
+            <div class="kep-div"></div>
+            <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be. A nemrég betelepített halfajok fő táplálékként fogyasztják. További veszélyt jelent a fajra, hogy az őslakosok ínyencségként fogyasztják. Az aztékok szent állatnak tekintették, és ünnepeken gyakran ették. A helyi piacokon még ma is árulják étkezési célra illegálisan. 2006 óta az IUCN kritikus állapotúnak minősítette. 2009-ben a vadon élő egyedek számát 700–1200-ra becsülték.</p>
         </div>
+
         <div class="lap">
+
         </div>
+
     </div>
 </body>
 </html>
