--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -19,8 +19,8 @@
             <h2>Elnevezése</h2>
             <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
             <h2>Elterjedése</h2>
-            <img class="kep8" src="/beadandó/ax8.jpg" alt="axolotl">
-            <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be. A nemrég betelepített halfajok fő táplálékként fogyasztják. További veszélyt jelent a fajra, hogy az őslakosok ínyencségként fogyasztják. Az aztékok szent állatnak tekintették, és ünnepeken gyakran ették. A helyi piacokon még ma is árulják étkezési célra illegálisan. 2006 óta az IUCN kritikus állapotúnak minősítette. 2009-ben a vadon élő egyedek számát 700–1200-ra becsülték.</p>
+            <img class="kep8" src="/Progalap_10/beadandó/ax8.jpg" alt="axolotl">
+            <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be.</p>
         </div>
 
         <div class="lap" id="lap2">
@@ -32,16 +32,16 @@
             <div class="container">
                 <div class="row align-items-center">
                   <div class="col">
-                    <img class="grid-img" src="/beadandó/ax5.jpg" alt="">
+                    <img class="grid-img img-fluid" src="/Progalap_10/beadandó/ax5.jpg" alt="">
                   </div>
                   <div class="col">
                     <div class="row">
-                        <img id="egy" class="grid-img" src="/beadandó/ax6.png" alt="">
-                        <img id="ketto" class="grid-img" src="/beadandó/ax9.jpg" alt="">
+                        <img id="egy" class="grid-img img-fluid" src="/Progalap_10/beadandó/ax6.png" alt="">
+                        <img id="ketto" class="grid-img img-fluid" src="/Progalap_10/beadandó/ax9.jpg" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <img class="grid-img" src="/beadandó/ax7.avif" alt="">
+                    <img class="grid-img img-fluid" src="/Progalap_10/beadandó/ax7.avif" alt="">
                   </div>
                 </div>
               </div>
