--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -19,17 +19,19 @@
             <h2>Elnevezése</h2>
             <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
             <h2>Elterjedése</h2>
-            <img class="kep8" src="/Progalap_10/beadandó/ax8.jpg" alt="axolotl">
+            <img class="kep8" src="/Progalap_10/beadandó/ax3.jpg" alt="axolotl">
             <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be.</p>
         </div>
 
         <div class="lap" id="lap2">
-            <h2>Neoténia</h2>
+            <h1>Neoténia</h1>
+            <hr>
             <p>Az Ambystoma többi mexikói fajával együtt az Ambystoma tigrinum komplex tagja. Élőhelye hasonló a többi neoténiás kétéltűéhez: nagy víztest, és veszélyes partok. Ezek a körülmények kedveznek a neoténiának. A mexikói tigrisszalamandra azonban ugyanezen a területen él, és nem neoténiás. A neoténiás fajok környezete rendszerint hegyes vagy dombos, az élelem kevés, és jódban szegény. Egy ilyen környezetben a szalamandrák számára előnyös, ha nem érik el a felnőtt méretet, mert így kevesebb és rosszabb minőségű élelemmel is beérik. Ha közvetlenül vagy közvetve sok jód kerül a szervezetükbe, akkor az átalakulás végbemegy, és szárazföldi szalamandraként több és jobb élelmet kell fogyasztaniuk. Egyes hegyi tavakban a jódhiány miatt törpék lesznek, így kreténizmus és törpenövés alakul ki náluk.</p>
             <p>A neoténia az axolotl, a barlangi vakgőte és még néhány közeli rokon kétéltűfaj jellegzetessége. Vannak fajok, amelyeknek nem mindegyik populációja neoténiás. Ez azt jelenti, hogy ezek az állatok az ivarérettség elérése után is megőrzik lárvaállapotuk jellegzetességeit, így vízi életmódot élnek, és kopoltyúval lélegeznek. Az átalakulás elmarad. Ennek az az oka, hogy a pajzsmirigy nem választja el azokat a hormonokat, amelyek hatására az átalakulás végbemenne. Ha a hiányzó tiroxint kísérletileg bejuttatják, akkor az átalakulás végbemegy. Az érintett kétéltűek esetén az átalakulás elmaradása nem jelent hátrányt, mivel ritkán száradnak ki azok a vizek, amelyekben élnek. Ha mégis, akkor átalakulnak tüdővel lélegző szárazföldi gőtévé.</p>
             <p>A neoténiát eredményező gének nem kapcsoltak, ezért valószínűsíthető, hogy a fogságban végzett tenyésztés miatt lesz minden egyed neoténiás. Az axolotl azért alkalmasabb a neoténia tanulmányozására, mint a rokon fajok, mert jód hatására képes átalakulni, ami több faj esetén már nem mehet végbe. Az átalakult axolotlok a mexikói tigrisszalamandrára hasonlítanak, de olyan jellegzetességekkel, amely indokolja a két faj elkülönítését.</p>
+            <hr>
             
-            <div class="container">
+            <div class="container max-width">
                 <div class="row align-items-center">
                   <div class="col">
                     <img class="grid-img img-fluid" src="/Progalap_10/beadandó/ax5.jpg" alt="">
