--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -19,8 +19,33 @@
             <h2>Elnevezése</h2>
             <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
             <h2>Elterjedése</h2>
-            <img class="kep8" src="/Progalap_10/beadandó/ax3.jpg" alt="axolotl">
+            <img class="kep8" src="/beadandó/ax3.jpg" alt="axolotl">
             <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be.</p>
+            <h2 class="szaporodas">Szaporodása</h2>
+            <img class="kep10" src="/beadandó/ax10.jpg" alt="">
+            <img class="kep12" src="/beadandó/ax12.jpg" alt="">
+            <table>
+              <tr>
+                <td>ivarérettség</td>
+                <td>8-15 hónap</td>
+              </tr>
+              <tr>
+                <td>peték száma</td>
+                <td>350-700</td>
+              </tr>
+              <tr>
+                <td>kikelési idő</td>
+                <td>10-12 nap</td>
+              </tr>
+              <tr>
+                <td>mellső végtagok megjelenése</td>
+                <td>20-25 nap</td>
+              </tr>
+              <tr>
+                <td>hátsó végtagok megjelenése</td>
+                <td>30-36 nap</td>
+              </tr>
+            </table>
         </div>
 
         <div class="lap" id="lap2">
@@ -34,16 +59,16 @@
             <div class="container max-width">
                 <div class="row align-items-center">
                   <div class="col">
-                    <img class="grid-img img-fluid" src="/Progalap_10/beadandó/ax5.jpg" alt="">
+                    <img class="grid-img img-fluid" src="/beadandó/ax5.jpg" alt="">
                   </div>
                   <div class="col">
                     <div class="row">
-                        <img id="egy" class="grid-img img-fluid" src="/Progalap_10/beadandó/ax6.png" alt="">
-                        <img id="ketto" class="grid-img img-fluid" src="/Progalap_10/beadandó/ax9.jpg" alt="">
+                        <img id="egy" class="grid-img img-fluid" src="/beadandó/ax6.png" alt="">
+                        <img id="ketto" class="grid-img img-fluid" src="/beadandó/ax9.jpg" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <img class="grid-img img-fluid" src="/Progalap_10/beadandó/ax7.avif" alt="">
+                    <img class="grid-img img-fluid" src="/beadandó/ax7.avif" alt="">
                   </div>
                 </div>
               </div>
