--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -9,34 +9,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="grid-con">
-
-        <div class="lap" id="lap1">
+        <div class="lap">
             <h1>Axolotl</h1>
-
             <hr>
-
             <h2>Elnevezése</h2>
             <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
             <h2>Elterjedése</h2>
             <img class="kep8" src="/beadandó/ax3.jpg" alt="axolotl">
             <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be.</p>
-            <h2 class="szaporodas">Szaporodása</h2>
+            <h2 class="szaporodas">Fejlődése</h2>
             <img class="kep10" src="/beadandó/ax10.jpg" alt="">
             <img class="kep12" src="/beadandó/ax12.jpg" alt="">
             <table>
               <tr>
-                <td>ivarérettség</td>
-                <td>8-15 hónap</td>
               </tr>
               <tr>
-                <td>peték száma</td>
-                <td>350-700</td>
+                <td>lerakott peték száma</td>
+                <td>350-700 db</td>
               </tr>
-              <tr>
-                <td>kikelési idő</td>
-                <td>10-12 nap</td>
-              </tr>
+              <td>kikelési idő</td>
+              <td>10-12 nap</td>
               <tr>
                 <td>mellső végtagok megjelenése</td>
                 <td>20-25 nap</td>
@@ -45,36 +37,43 @@
                 <td>hátsó végtagok megjelenése</td>
                 <td>30-36 nap</td>
               </tr>
+              <tr>
+                <td>ivarérettség</td>
+                <td>8-15 hónap</td>
+              </tr>
             </table>
         </div>
 
-        <div class="lap" id="lap2">
-            <h1>Neoténia</h1>
+        <div class="lap">
+            <h2 class="h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne">Megjelenése</h2>
             <hr>
-            <p>Az Ambystoma többi mexikói fajával együtt az Ambystoma tigrinum komplex tagja. Élőhelye hasonló a többi neoténiás kétéltűéhez: nagy víztest, és veszélyes partok. Ezek a körülmények kedveznek a neoténiának. A mexikói tigrisszalamandra azonban ugyanezen a területen él, és nem neoténiás. A neoténiás fajok környezete rendszerint hegyes vagy dombos, az élelem kevés, és jódban szegény. Egy ilyen környezetben a szalamandrák számára előnyös, ha nem érik el a felnőtt méretet, mert így kevesebb és rosszabb minőségű élelemmel is beérik. Ha közvetlenül vagy közvetve sok jód kerül a szervezetükbe, akkor az átalakulás végbemegy, és szárazföldi szalamandraként több és jobb élelmet kell fogyasztaniuk. Egyes hegyi tavakban a jódhiány miatt törpék lesznek, így kreténizmus és törpenövés alakul ki náluk.</p>
-            <p>A neoténia az axolotl, a barlangi vakgőte és még néhány közeli rokon kétéltűfaj jellegzetessége. Vannak fajok, amelyeknek nem mindegyik populációja neoténiás. Ez azt jelenti, hogy ezek az állatok az ivarérettség elérése után is megőrzik lárvaállapotuk jellegzetességeit, így vízi életmódot élnek, és kopoltyúval lélegeznek. Az átalakulás elmarad. Ennek az az oka, hogy a pajzsmirigy nem választja el azokat a hormonokat, amelyek hatására az átalakulás végbemenne. Ha a hiányzó tiroxint kísérletileg bejuttatják, akkor az átalakulás végbemegy. Az érintett kétéltűek esetén az átalakulás elmaradása nem jelent hátrányt, mivel ritkán száradnak ki azok a vizek, amelyekben élnek. Ha mégis, akkor átalakulnak tüdővel lélegző szárazföldi gőtévé.</p>
-            <p>A neoténiát eredményező gének nem kapcsoltak, ezért valószínűsíthető, hogy a fogságban végzett tenyésztés miatt lesz minden egyed neoténiás. Az axolotl azért alkalmasabb a neoténia tanulmányozására, mint a rokon fajok, mert jód hatására képes átalakulni, ami több faj esetén már nem mehet végbe. Az átalakult axolotlok a mexikói tigrisszalamandrára hasonlítanak, de olyan jellegzetességekkel, amely indokolja a két faj elkülönítését.</p>
+            <p>Érdekessége a széles feje két oldalán található több pár kopoltyú, mely felnőtt, ivarérett korára is megmarad. Egy esetben veszíti el őket: ha a tó, amiben él, kiszárad, akkor leválnak a fejről, és az állat átáll a tüdővel való légzésre (neoténia).</p>
+            <p>Az axolotlnak a természetben a színe általában sötét, vad színű, szürke vagy barna, fekete pöttyökkel, de a tenyésztés során kialakult az albínó, valamint többféle színes változat, az aranytól kezdve a feketéig. Több színváltozatot a tigrisszalamandrával keresztezve hoztak létre. A teljesen kifejlett állatok hossza átlagosan 30 cm, de akár 45 cm-re is megnőhetnek. Zömök testfelépítésű. Farka erős, oldalról lapított evezőfarok. Bordái kitüremkednek. Feje lapos és széles. Kerek, széles pofája alsó állású. Szemhéj nélküli szemei távol ülnek egymástól. Lábai rövidek, de erősek, és az első lábakon 4 ujjat találunk, a hátsón pedig ötöt. Ujjai hosszúak és vékonyak. Az axolotlok életkora a 25 évet is elérheti. Fogai a gyomorszájnál találhatók, amelyek az átalakulás során kerülnének a helyükre. Zsákmányukat beszippantják. A nemek hasonlók, leginkább a kloakájuk alapján különböztethetők meg: a nőstényeké lapos, a hímeké kidomborodó. A nőstények kövérebbek a termelődő ikrák miatt. Kopoltyúval, bőrön át és tüdővel is lélegeznek.</p>
             <hr>
+            <h2 class="h1-lenne-de-gyanitom-hogy-farkas-norbert-levente-belekotne">Különböző színű egyedek</h2>
             
-            <div class="container max-width">
+            <div class="container">
                 <div class="row align-items-center">
                   <div class="col">
-                    <img class="grid-img img-fluid" src="/beadandó/ax5.jpg" alt="">
-                  </div>
-                  <div class="col">
                     <div class="row">
-                        <img id="egy" class="grid-img img-fluid" src="/beadandó/ax6.png" alt="">
-                        <img id="ketto" class="grid-img img-fluid" src="/beadandó/ax9.jpg" alt="">
+                      <img class="grid-img img-fluid" src="/beadandó/ax7.avif" alt="">
+                      <img class="grid-img img-fluid" src="/beadandó/ax13.jpg" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <img class="grid-img img-fluid" src="/beadandó/ax7.avif" alt="">
+                    <div class="row row2">
+                      <img id="egy" class="grid-img img-fluid" src="/beadandó/ax6.png" alt="">
+                      <img id="ketto" class="grid-img img-fluid" src="/beadandó/ax9.jpg" alt="">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="row row3">
+                      <img class="grid-img img-fluid" src="/beadandó/ax15.jpg" alt="">
+                      <img class="grid-img img-fluid" src="/beadandó/ax14.webp" alt="">
+                    </div>
                   </div>
                 </div>
               </div>
         </div>
-
-        
-    </div>
 </body>
 </html>
