--- a/beadandó/kezdolap.html
+++ b/beadandó/kezdolap.html
@@ -15,11 +15,11 @@
             <h2>Elnevezése</h2>
             <p>Az axolotl elnevezés a nahuatl (azték) nyelvből származik, az egyik legelfogadottabb értelmezés szerint Xolotlhoz, a halál és egyben az újjászületés kutya alakú istenéhez köti a fajt. Az azték mitológia szerint az első embercsoportokat az istenek megölték, és egy Xolotl által hozott emberi csontból teremtették újra az embereket. Jelentése vízi kutya (atl=víz, xolotl=kutya).</p>
             <h2>Elterjedése</h2>
-            <img class="kep8" src="/beadandó/ax3.jpg" alt="axolotl">
+            <img id="ax3" src="/beadandó/ax3.jpg" alt="axolotl">
             <p>A mexikói axolotl őshazája Mexikó, lelőhelye Xochimilco csatornái, (Mexikóvárostól délre) az itt lévő tavakban nagy mennyiségben megtalálható. Eredeti elterjedési területének nagy részéről eltűnt, így az egykori Texcoco-tóból, és a Zumpango-tóból. A Texcocot időszakos kiöntései miatt csapolták le. Ma már a veszélyeztetett fajok közé soroljuk, azért is, mert különféle laboratóriumi kísérletekhez is használják. Éjszakai állat, és a hideg, oxigénben gazdag vizeket kedveli, és gyakran az aljzaton tartózkodik. A víz hőmérséklete viszonylag ritkán haladja meg a 20 °C-ot, és télen 6–7 °C-ra süllyed. Mexikóváros növekedése veszélyezteti; a víz minőségének javítására tett erőfeszítéseket nem követte az állomány növekedése. Az IUCN Vörös Listája veszélyeztetettnek sorolja be.</p>
-            <h2 class="szaporodas">Fejlődése</h2>
-            <img class="kep10" src="/beadandó/ax10.jpg" alt="">
-            <img class="kep12" src="/beadandó/ax12.jpg" alt="">
+            <h2 class="fejlodese">Fejlődése</h2>
+            <img class="table-img" src="/beadandó/ax10.jpg" alt="">
+            <img class="table-img" src="/beadandó/ax12.jpg" alt="">
             <table>
               <tr>
               </tr>
@@ -55,19 +55,20 @@
             <div class="container">
                 <div class="row align-items-center">
                   <div class="col">
-                    <div class="row">
+                    <div class="row side-row">
                       <img class="grid-img img-fluid" src="/beadandó/ax7.avif" alt="">
                       <img class="grid-img img-fluid" src="/beadandó/ax13.jpg" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="row row2">
-                      <img id="egy" class="grid-img img-fluid" src="/beadandó/ax6.png" alt="">
-                      <img id="ketto" class="grid-img img-fluid" src="/beadandó/ax9.jpg" alt="">
+                    <div class="row middle-row">
+                      <img class="grid-img img-fluid" src="/beadandó/ax6.png" alt="">
+                      <!-- <img class="grid-img img-fluid" src="/beadandó/ax16.jpg" alt=""> -->
+                      <img class="grid-img img-fluid" src="/beadandó/ax9.jpg" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="row row3">
+                    <div class="row side-row">
                       <img class="grid-img img-fluid" src="/beadandó/ax15.jpg" alt="">
                       <img class="grid-img img-fluid" src="/beadandó/ax14.webp" alt="">
                     </div>
